# order-bot

./: README.md  docker-compose.yml
.github/workflows/: terraform.yml
ddl/: order_bot_ddl.sql  order_bot_mgmt_ddl.sql
doc/: erd.md  order-bot-mgmt-svc-erd.md  order-bot-svc-erd.md  use-case-diagram.md
infra-terraform/: .gitignore  README.md
infra-terraform/docs/: TODO.md  architecture.md  cost-estimate.md  tags.md  (+4 more)
order-bot-frontend/: .env.local  .gitignore  AGENTS.md  README.md  package-lock.json  package.json
order-bot-mgmt-svc/: .env  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
order-bot-svc/: .env  Dockerfile  README.md  go.mod  go.sum  pyproject.toml  requirements.txt
order-bot-svc/app/: config.py  db.py  main.py  models.py  repositories.py  seed.py
order-bot-svc/app/api/: routes.py
order-bot-svc/app/services/: cart_service.py  intent.py  response_builder.py
order-bot-svc/cmd/api/: main.go
order-bot-svc/ddl/: ddl.sql
order-bot-svc/internal/server/: lazy_init_test.go  routes.go  server.go
order-bot-svc/src/: config.py  db.py  entities.py  enums.py  main.py  repositories.py  schemas.py  seed.py
order-bot-svc/src/api/: health_route.py  routes.py
order-bot-svc/src/grpc/: client.py  contracts.py  server.py
order-bot-svc/src/intent/: intent.py  mcp_server.py
order-bot-svc/src/services/: cart_service.py  chat_agents.py  intent.py  intent_mcp_server.py  menu_service.py  order_service.py  response_builder.py
order-bot-svc/src/utils/: money_util.py
order-bot-svc/tests/: test_chat_flow.py  test_integ_services.py  test_mcp.py
(+189 files in other folders)
