[project]
name = "order-bot-svc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-core>=2.41.5",
    "starlette>=0.52.1",
    "langchain>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-mistralai>=0.2.0",
    "mcp>=1.0.0",
]
